update: documentation now looks usable
